Updating structure of project and resolving some errors